# livermore-broker

./: .env  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: FindFetchBoost.cmake  FindFetchBreakpad.cmake  FindFetchCtp.cmake  FindFetchEigen3.cmake  FindFetchFmt.cmake  FindFetchGTest.cmake  FindFetchLibcpp.cmake  FindFetchLibzmq.cmake  FindFetchSpdlog.cmake
cmakes/: platform.cmake
examples/: CMakeLists.txt
src/: CMakeLists.txt  global.h  main.cpp  service.cpp  service.h  version.h
src/common/: application_base.cpp  application_base.h  config_base.cpp  config_base.h  config_mgr_base.cpp  config_mgr_base.h  error_base.h  export.h  ipc.cpp  ipc.h  market_data.h  market_data_generated.h  market_data_help.cpp  market_data_help.h  market_data_shm.cpp  market_data_shm.h  market_data_util.cpp  market_data_util.h  msg.h  msg_id.h  shm.cpp  shm.h
src/config/: livermore-broker.ini  livermore-broker.sql
src/script/: CMakeLists.txt  market_data.fbs
src/service/: CMakeLists.txt  service.cpp  service.h
src/service/backtest/: CMakeLists.txt
src/service/broadcast/: CMakeLists.txt  api_json.h  application.cpp  application.h  broadcast.cpp  broadcast.h  config.cpp  config.h  error.h  export.cpp  json_msg.h  tcp_gate.cpp  tcp_gate.h  util.cpp  util.h  version.h
src/service/broadcast/bak/: codec.cpp  codec.h  fbs_msg.h  handler.cpp  handler.h
src/service/database/: CMakeLists.txt  application.cpp  application.h  cleaner.cpp  cleaner.h  config.cpp  config.h  crawler.cpp  crawler.h  database.cpp  database.h  error.h  export.cpp  scraper.cpp  scraper.h  version.h
src/service/manage/: CMakeLists.txt  application.cpp  application.h  config.cpp  config.h  config_mgr.cpp  config_mgr.h  error.h  export.cpp  manage.cpp  manage.h  proc.cpp  proc.h  proc_mgr.cpp  proc_mgr.h  version.h
src/service/quote/: CMakeLists.txt  application.cpp  application.h  config.cpp  config.h  config_mgr.cpp  config_mgr.h  ctp.cpp  ctp.h  error.h  export.cpp  quote.cpp  quote.h  tx.cpp  tx.h  version.h  xtp.cpp  xtp.h
src/service/sentinel/: CMakeLists.txt  error.h  sentinel.cpp  sentinel.h  version.h
